--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
 	}
 
 h1 {
-	font-size: 60px ;
-	padding-top: 60px;
-	text-shadow: 2px 2px 2px gray;
-	margin-bottom: 15px;
+	font-size: 50px ;
+	padding-top: 150px;
+	margin-bottom: -200px;
 	}
 
-	p{
-	font-size: 30px;
+    p{
+	font-size: 25px;
+	margin-top: 50px;
 
 		}
 		.botao {
