--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	text-align: center;
-	font-family:verdana;
+	font-family:candara;
 	background-image: url(Imagens/dreamstime.jpg);
 	color: white;
 
